-- Auction System DB Schema
-- Compatible with H2 (dev/test).
-- Updated: added auto_bid_configs table and PAID/CANCELED states

DROP TABLE IF EXISTS auto_bid_configs;
DROP TABLE IF EXISTS bid_transactions;
DROP TABLE IF EXISTS auctions;
DROP TABLE IF EXISTS items;
DROP TABLE IF EXISTS users;

CREATE TABLE users (
  id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  username VARCHAR(100) NOT NULL UNIQUE,
  full_name VARCHAR(100),
  password_hash VARCHAR(255) NOT NULL,
  role VARCHAR(20) NOT NULL,
  is_deleted BOOLEAN DEFAULT FALSE
);

CREATE TABLE items (
  id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  seller_id BIGINT,
  seller_email VARCHAR(100),
  type VARCHAR(20),
  name VARCHAR(200),
  description VARCHAR(1000),
  starting_bid DECIMAL(19,2),
  image_url VARCHAR(500),
  is_deleted BOOLEAN DEFAULT FALSE
);

CREATE TABLE auctions (
  id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  item_id BIGINT,
  title VARCHAR(200),
  description VARCHAR(1000),
  category VARCHAR(50),
  starting_bid DECIMAL(19,2),
  current_bid DECIMAL(19,2),
  start_time TIMESTAMP,
  end_time TIMESTAMP,
  status VARCHAR(20),
  highest_bidder_id BIGINT,
  winner_email VARCHAR(100),
  seller_email VARCHAR(100),
  image_url VARCHAR(500),
  CONSTRAINT chk_auction_status CHECK (status IN ('OPEN','RUNNING','FINISHED','PAID','CANCELED'))
);

CREATE TABLE bid_transactions (
  id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  auction_id BIGINT,
  bidder_id BIGINT,
  bidder_email VARCHAR(100),
  bidder_name VARCHAR(100),
  amount DECIMAL(19,2),
  created_at TIMESTAMP
);

CREATE TABLE auto_bid_configs (
  id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  auction_id BIGINT,
  bidder_id BIGINT,
  bidder_email VARCHAR(100),
  max_bid DECIMAL(19,2),
  increment_amount DECIMAL(19,2),
  registered_at TIMESTAMP,
  UNIQUE(auction_id, bidder_id)
);

-- Seed users (passwords are SHA-256 hashes)
-- demo@gmail.com / Demo@123
-- seller@gmail.com / Seller@123
-- admin@gmail.com / Admin@123
INSERT INTO users (username, full_name, password_hash, role) VALUES
  ('demo@gmail.com', 'Demo Bidder', '55e4b5f5e84b38cec960f0c3b3aab97e4d6ff4bb9eb6e1f10bbff5b05a8dc5c5', 'BIDDER'),
  ('seller@gmail.com', 'Seller One', 'a2e1eab73d9d1a38d0f1e29db4a4af5a5e95db7a0f0e5cab1fc1a49a4e47e2a9', 'SELLER'),
  ('admin@gmail.com', 'System Admin', 'f3f0d9f2c03a849e3bb20f51d4a1e17f1b6f15c63de6e79e7b7ecf5e3aad09f4', 'ADMIN');

CREATE INDEX idx_items_seller_email ON items(seller_email);
CREATE INDEX idx_auctions_status ON auctions(status);
CREATE INDEX idx_bid_transactions_auction_id ON bid_transactions(auction_id);
CREATE INDEX idx_auto_bid_configs_auction_id ON auto_bid_configs(auction_id);

-- Seed Items
INSERT INTO items (seller_id, seller_email, type, name, description, starting_bid, image_url) VALUES 
(2, 'seller@gmail.com', 'Watches', 'Vintage Rolex Submariner 1960s', 'Rare vintage Rolex Submariner in excellent condition. Original parts, fully serviced. A true collectors piece.', 8000.00, 'https://images.unsplash.com/photo-1670177257750-9b47927f68eb?auto=format&fit=crop&w=1080&q=80'),
(2, 'seller@gmail.com', 'Electronics', 'Leica M3 Vintage Camera 1954', 'Classic Leica M3 rangefinder camera from 1954. Well-maintained, fully functional. Includes original leather case and strap.', 2500.00, 'https://images.unsplash.com/photo-1495121553079-4c61bcce1894?auto=format&fit=crop&w=1080&q=80'),
(2, 'seller@gmail.com', 'Furniture', 'Victorian Mahogany Writing Desk', 'Beautiful 19th century Victorian writing desk. Solid mahogany construction with original brass fittings. Professionally restored.', 1200.00, 'https://images.unsplash.com/photo-1544691560-fc2053d97726?auto=format&fit=crop&w=1080&q=80'),
(2, 'seller@gmail.com', 'Vehicles', '1967 Ford Mustang Fastback', 'Iconic 1967 Mustang Fastback. Complete restoration, numbers matching, V8 engine. Show quality condition.', 35000.00, 'https://images.unsplash.com/photo-1587750059638-e7e8c43b99fc?auto=format&fit=crop&w=1080&q=80'),
(2, 'seller@gmail.com', 'Art', 'Abstract Oil Painting by Listed Artist', 'Original abstract oil painting on canvas by recognized contemporary artist. Vibrant colors, gallery-quality presentation.', 2000.00, 'https://images.unsplash.com/photo-1572392640988-ba48d1a74457?auto=format&fit=crop&w=1080&q=80'),
(2, 'seller@gmail.com', 'Jewelry', '2.5 Carat Diamond Engagement Ring', 'Stunning 2.5 carat round brilliant diamond in platinum setting. GIA certified, excellent cut, VS1 clarity, F color.', 6500.00, 'https://images.unsplash.com/photo-1481980235850-66e47651e431?auto=format&fit=crop&w=1080&q=80'),
(2, 'seller@gmail.com', 'Electronics', 'Sony PlayStation 5 Pro', 'Brand new sealed PS5 Pro console with 2TB storage. Comes with 2 DualSense controllers and a 1-year warranty.', 500.00, 'https://images.unsplash.com/photo-1606144042873-77eb6be4949a?auto=format&fit=crop&w=1080&q=80'),
(2, 'seller@gmail.com', 'Collectibles', '1st Edition Charizard Pokemon Card (PSA 9)', 'Extremely rare 1999 Base Set 1st Edition Charizard Holo. Graded PSA 9 Mint. A holy grail for TCG collectors.', 15000.00, 'https://images.unsplash.com/photo-1613771404784-3a5686aa2be3?auto=format&fit=crop&w=1080&q=80');

-- Seed Auctions
INSERT INTO auctions (item_id, title, description, category, starting_bid, current_bid, start_time, end_time, status, highest_bidder_id, seller_email, image_url) VALUES 
(1, 'Vintage Rolex Submariner 1960s', 'Rare vintage Rolex Submariner in excellent condition. Original parts.', 'Watches', 8000.00, 12500.00, DATEADD('HOUR', -4, CURRENT_TIMESTAMP()), DATEADD('DAY', 2, CURRENT_TIMESTAMP()), 'OPEN', 1, 'seller@gmail.com', 'https://images.unsplash.com/photo-1670177257750-9b47927f68eb?auto=format&fit=crop&w=1080&q=80'),
(2, 'Leica M3 Vintage Camera 1954', 'Classic Leica M3 rangefinder camera from 1954.', 'Electronics', 2500.00, 3200.00, DATEADD('HOUR', -2, CURRENT_TIMESTAMP()), DATEADD('HOUR', 5, CURRENT_TIMESTAMP()), 'OPEN', 1, 'seller@gmail.com', 'https://images.unsplash.com/photo-1495121553079-4c61bcce1894?auto=format&fit=crop&w=1080&q=80'),
(3, 'Victorian Mahogany Writing Desk', 'Beautiful 19th century Victorian writing desk.', 'Furniture', 1200.00, 1850.00, DATEADD('HOUR', -6, CURRENT_TIMESTAMP()), DATEADD('DAY', 1, CURRENT_TIMESTAMP()), 'OPEN', 1, 'seller@gmail.com', 'https://images.unsplash.com/photo-1544691560-fc2053d97726?auto=format&fit=crop&w=1080&q=80'),
(4, '1967 Ford Mustang Fastback', 'Iconic 1967 Mustang Fastback.', 'Vehicles', 35000.00, 45000.00, DATEADD('DAY', -1, CURRENT_TIMESTAMP()), DATEADD('DAY', 3, CURRENT_TIMESTAMP()), 'OPEN', 1, 'seller@gmail.com', 'https://images.unsplash.com/photo-1587750059638-e7e8c43b99fc?auto=format&fit=crop&w=1080&q=80'),
(5, 'Abstract Oil Painting by Listed Artist', 'Original abstract oil painting.', 'Art', 2000.00, 2800.00, DATEADD('HOUR', -3, CURRENT_TIMESTAMP()), DATEADD('HOUR', 12, CURRENT_TIMESTAMP()), 'OPEN', 1, 'seller@gmail.com', 'https://images.unsplash.com/photo-1572392640988-ba48d1a74457?auto=format&fit=crop&w=1080&q=80'),
(6, '2.5 Carat Diamond Engagement Ring', 'Stunning 2.5 carat round brilliant diamond.', 'Jewelry', 6500.00, 8500.00, DATEADD('HOUR', -1, CURRENT_TIMESTAMP()), DATEADD('HOUR', 18, CURRENT_TIMESTAMP()), 'OPEN', 1, 'seller@gmail.com', 'https://images.unsplash.com/photo-1481980235850-66e47651e431?auto=format&fit=crop&w=1080&q=80'),
(7, 'Sony PlayStation 5 Pro', 'Brand new sealed PS5 Pro console.', 'Electronics', 500.00, 699.00, DATEADD('HOUR', -5, CURRENT_TIMESTAMP()), DATEADD('HOUR', 48, CURRENT_TIMESTAMP()), 'OPEN', 1, 'seller@gmail.com', 'https://images.unsplash.com/photo-1606144042873-77eb6be4949a?auto=format&fit=crop&w=1080&q=80'),
(8, '1st Edition Charizard Pokemon Card (PSA 9)', 'Extremely rare 1999 Base Set.', 'Collectibles', 15000.00, 22000.00, DATEADD('DAY', -2, CURRENT_TIMESTAMP()), DATEADD('DAY', 4, CURRENT_TIMESTAMP()), 'OPEN', 1, 'seller@gmail.com', 'https://images.unsplash.com/photo-1613771404784-3a5686aa2be3?auto=format&fit=crop&w=1080&q=80');

-- Seed Bids
INSERT INTO bid_transactions (auction_id, bidder_id, bidder_email, bidder_name, amount, created_at) VALUES 
(1, 1, 'demo@gmail.com', 'Demo Bidder', 11500.00, DATEADD('MINUTE', -60, CURRENT_TIMESTAMP())),
(1, 1, 'demo@gmail.com', 'Demo Bidder', 12000.00, DATEADD('MINUTE', -30, CURRENT_TIMESTAMP())),
(1, 1, 'demo@gmail.com', 'Demo Bidder', 12500.00, DATEADD('MINUTE', -10, CURRENT_TIMESTAMP())),
(2, 1, 'demo@gmail.com', 'Demo Bidder', 3000.00, DATEADD('MINUTE', -45, CURRENT_TIMESTAMP())),
(2, 1, 'demo@gmail.com', 'Demo Bidder', 3200.00, DATEADD('MINUTE', -5, CURRENT_TIMESTAMP())),
(3, 1, 'demo@gmail.com', 'Demo Bidder', 1850.00, DATEADD('MINUTE', -120, CURRENT_TIMESTAMP())),
(4, 1, 'demo@gmail.com', 'Demo Bidder', 42000.00, DATEADD('MINUTE', -90, CURRENT_TIMESTAMP())),
(4, 1, 'demo@gmail.com', 'Demo Bidder', 45000.00, DATEADD('MINUTE', -20, CURRENT_TIMESTAMP())),
(5, 1, 'demo@gmail.com', 'Demo Bidder', 2800.00, DATEADD('MINUTE', -15, CURRENT_TIMESTAMP())),
(6, 1, 'demo@gmail.com', 'Demo Bidder', 8500.00, DATEADD('MINUTE', -8, CURRENT_TIMESTAMP())),
(7, 1, 'demo@gmail.com', 'Demo Bidder', 699.00, DATEADD('MINUTE', -2, CURRENT_TIMESTAMP())),
(8, 1, 'demo@gmail.com', 'Demo Bidder', 22000.00, DATEADD('MINUTE', -14, CURRENT_TIMESTAMP()));
