package com.ltnc.auction.shared;

public enum AuctionState {
  OPEN,
  RUNNING,
  FINISHED
}

