package com.ltnc.auction.shared.protocol;

public enum MessageType {
  PING,
  PONG,
  BID,
  BID_RESULT,
  AUCTION_STATE_UPDATE,
  ERROR
}

